fixed bug where switch overlapped header text when website was opened on a phone

--- a/style/homepage.css
+++ b/style/homepage.css
@@ -9,7 +9,7 @@ header {
     background-color: rgb(29, 27, 27);
     font-size: 15px;
     padding: 10px;
-    width: 100%;
+    width: calc(100% + 20px);
     top: 0;
     position: relative;
     margin-top: -10px;
@@ -21,8 +21,7 @@ header {
 .switch {
     position: absolute;
     top: 50%;
-    margin-left: 80px;
-    left: 0;
+    left: 20px; 
     transform: translateY(-50%);
     width: 40px;
     height: 20px;
